tests/machine/x/erlang/group_by_multi_join.error
exit status 127
tests/machine/x/erlang_new/group_by_multi_join.erl:9:257: syntax error before: '}'
escript: There were compilation errors.
